--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "ios-common"]
 	path = ios/common
 	url = https://github.com/rjp-thijs/background-geolocation-ios.git
+    branch = feat-time-based
 [submodule "android-common"]
 	path = android/common
 	url = https://github.com/rjp-thijs/background-geolocation-android.git
+    branch = feat-time-based
